[Bug] fix bugs
