# docs/swagger.json
@@ -702,11 +702,11 @@
                 "parameters": [
                     {
                         "description": "login a user",
-                        "name": "models.User",
+                        "name": "Input",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/controllers.loginInput"
                         }
                     }
                 ],
@@ -768,6 +768,17 @@
         }
     },
     "definitions": {
+        "controllers.loginInput": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Comment": {
             "type": "object",
             "properties": {
